--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 #
-# $Id: hwdetect.in,v 1.44 2003/11/03 11:28:08 jaco Exp $
+# $Id: hwdetect.in,v 1.45 2003/11/03 18:12:18 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -818,13 +818,13 @@ sub hwdetect_getpersistent {
 					}
 				}
 				elsif ($cmdline{'home'} =~ /usb/ && $devs{$dev}->{usb}) {
-					system("(cp -au /home/* $mymnt) 2>/dev/null");
-					open P, "$persist";
+					open P, ">$persist";
 					print P "mount=/home\n";
 					close P;
 					$devs{$dev}->{mount} = "/home";
 					$devs{$dev}->{opt} = $fsopt_fullrw;
 					$devs{$dev}->{persisted} = 1;
+					system("(cp -au /home/* $mymnt) 2>/dev/null");
 				}
 				umount(undef, $mymnt);
 			}
